# gale

./: .bazelignore  .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  liberror.rlib  libpoll.rlib  libpriority.rlib  rivet.yaml  rust-toolchain.toml
benches/engine_control/: CMakeLists.txt  README.md  SCOPE.md  analyze.py  compare.py  prj-ctf.conf  prj-gale.conf  prj.conf  run_qemu_bench.sh  spar_oracle.py  synth_events.py  tag_events.py
benches/engine_control/boards/: nucleo_g474re.conf  nucleo_g474re.overlay
benches/engine_control/renode/: engine_stm32f4.robot
benches/engine_control/silicon/: README.md  capture.py  capture.sh
benches/engine_control/src/: control.c  control.h  main.c  smart_dwt.c  smart_dwt.h  smart_mcu.h  smart_mcu_g4.c  smart_mcu_stub.c  tables.c
benches/engine_control/tracing_ctf/: README.md  parse_ctf_minimal.py  qemu_cortex_m3.overlay  run-ctf.sh
benches/engine_control/wasm-component/: Cargo.toml  README.md  gen-tables.sh  run.sh
benches/engine_control/wasm-dissolve/: README.md  compare.sh  shim.c
benches/flight_control/: CMakeLists.txt  analyze.py  prj-gale.conf  prj.conf  run_qemu_bench.sh  tag_events.py
benches/flight_control/renode/: flight_stm32f4.robot
benches/flight_control/runs/: 2026-06-05-g474re-native-algo141.txt  2026-06-05-g474re-wasmLTO-algo157.txt  RESULT-2026-06-13-g474re-v0.11.41.txt
benches/flight_control/src/: control.c  main.c
benches/flight_control/wasm/: README.md  control_wasm_tramp.S
benches/gust/: BENCH.md  COMPARE.md  Cargo.toml  DEMONSTRATOR.md  README.md  REFLASH.md  build-fused.sh  build.rs  compare-codegen.sh  iso_contain.x  memory.x  run-bench.sh  run-fused.sh  run-qemu.sh
benches/gust/.cargo/: config.toml
benches/gust/browser/: .gitignore  Cargo.toml  README.md  build.sh
benches/gust/drivers/: build-breadth.sh  build-gustos-components.sh  build-os-time.sh  build-os-tl.sh  build-os-ts.sh  build-reloc-cores.sh  check-providers.sh  emit-wcet.sh
benches/gust/esp32c3/: Cargo.toml  RESULTS.md  build.rs
benches/gust/optimization/: ANALYSIS-where-to-optimize.md  BEAT-LLVM-0.7x.md  RECO-synth-cycles.md  wsc-facts-phase1.sh
benches/gust/renode/: gust_bench_f100.robot  gust_f100.robot
benches/gust/renode-test/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  f100_silicon.repl  gust_adc.elf  gust_adc.repl  gust_adc.robot  gust_breadth.elf  gust_breadth.repl  gust_breadth.robot  gust_can.elf  gust_can.repl  gust_can.robot  gust_control.elf  gust_control.robot  gust_dac.elf  gust_dac.repl  gust_dac.robot  gust_dma.elf  gust_dma.repl  gust_dma.robot  gust_estimator_part.elf  gust_f100.robot  gust_gpio.elf  gust_gpio.repl  gust_gpio.robot  gust_i2c.elf  gust_i2c.repl  gust_i2c.robot  gust_m3_8k.repl  gust_pwm.elf  gust_pwm.repl  gust_pwm.robot  gust_renode.robot  gust_spi.elf  gust_spi.repl  gust_spi.robot  gust_switch_2core.repl  gust_switch_2core.robot  (+12 more)
benches/gust/silicon/: README.md  RESULTS-f100.md  RESULTS-g474re.md  RESULTS-wdg-g474re.md  memory-f100.x  memory-g474re.x  run-adc.sh  run-wdg.sh  run.sh
benches/gust/src/: main.rs
benches/gust/targets/: RESULTS-target-model.md  check-wit-resolve.sh  cortex_m.aadl  gust_target_props.aadl  regen.sh  stm32f100.aadl  stm32g474.aadl
benches/gust/wasm-kernel/: fused.wasm
crates/gale-app-demo/: Cargo.toml  DISSOLVE.md  README.md  dissolve.sh  run.sh
crates/gale-app-demo/src/: lib.rs
crates/gale-app-demo/tcb/: cabi_arena.c
crates/gale-kiln/: Cargo.toml  README.md  run.sh
ffi/: Cargo.toml
ffi/include/: gale_atomic.h  gale_bitarray.h  gale_cbprintf.h  gale_coarse.h  gale_condvar.h  gale_cpu_mask.h  gale_dynamic.h  gale_error_check.h  gale_event.h  gale_fatal.h  gale_fifo.h  gale_futex.h  gale_heap.h  gale_ipc.h  gale_ipi.h  gale_kheap.h  gale_lifo.h  gale_mbox.h  gale_mem_domain.h  gale_mem_slab.h  gale_mempool.h  gale_mmu.h  gale_msgq.h  gale_mutex.h  gale_net_buf.h  gale_pipe.h  gale_pm.h  gale_poll.h  gale_queue.h  gale_rb.h  gale_ring_buf.h  gale_sched.h  gale_sem.h  gale_smp_state.h  gale_spinlock.h  gale_spinlock_validate.h  gale_stack.h  gale_thread_lifecycle.h  gale_timeout.h  gale_timer.h  (+5 more)
ffi/src/: coarse.rs  lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: condvar_fuzz.rs  event_fuzz.rs  mem_slab_fuzz.rs  msgq_fuzz.rs  mutex_api_fuzz.rs  mutex_fuzz.rs  pipe_fuzz.rs  precondition_erasure.rs  sem_api_fuzz.rs  sem_fuzz.rs  stack_fuzz.rs  timer_fuzz.rs
fuzz/src/: lib.rs  precondition_erasure.rs
plain/: BUILD.bazel  condvar.rs  device_init.rs  event.rs  fatal.rs  fault_decode.rs  mem_slab.rs  mmu.rs  mpu.rs  msgq.rs  mutex.rs  pipe.rs  sem.rs  stack.rs  systick.rs  timer.rs
plain/src/: atomic.rs  cbprintf.rs  condvar.rs  cpu_mask.rs  device_init.rs  dynamic.rs  error.rs  event.rs  executor.rs  fatal.rs  fault_decode.rs  fifo.rs  futex.rs  health_monitor.rs  heap.rs  ipc.rs  ipi.rs  kheap.rs  lib.rs  lifo.rs  mbox.rs  mem_domain.rs  mem_slab.rs  mempool.rs  mmu.rs  mpu.rs  mpu_switch.rs  msgq.rs  mutex.rs  net_buf.rs  partition_switch.rs  pipe.rs  pm.rs  poll.rs  priority.rs  queue.rs  ring_buf.rs  sched.rs  sem.rs  smp_state.rs  (+15 more)
proofs/: BUILD.bazel  condvar_proofs.v  event_proofs.v  executor_proofs.v  heap_proofs.v  mem_slab_proofs.v  msgq_proofs.v  mutex_proofs.v  pipe_proofs.v  poll_proofs.v  sched_proofs.v  sem_proofs.v  stack_proofs.v  thread_lifecycle_proofs.v  timer_proofs.v
proofs/lean/: Atomic.lean  BUILD.bazel  MpuRegion.lean  PriorityCeiling.lean  PriorityQueue.lean  RingBuf.lean  Scheduling.lean  SysTick.lean
proofs/ordeal-bv/: README.md  cfsr_masks_partition.smt2  cfsr_partition_lossless.smt2  cfsr_partition_mutant.smt2  cpu_mask_pot.smt2  mpu_pow2_bwd.smt2  mpu_pow2_fwd.smt2  mpu_pow2_fwd_mutant.smt2  run.sh  sv_cpu_recover.smt2  sv_cpu_recover_mutant.smt2  sv_thread_recover.smt2  verus_cpu_mask_realvc.smt2  verus_mpu_pow2_realvc.smt2
renode/: BUILD.bazel  mps2_an521_sem.robot  stm32f4_sem.robot  stm32l552_sem.robot  zynqmp_r5_sem.robot
tools/gust-target-gen/: Cargo.toml  README.md
tools/verus-strip/: BUILD.bazel  Cargo.toml
(+701 files in other folders)
