"""Gale — formally verified Zephyr kernel primitives for ASIL-D safety-critical systems.

Zephyr's wind, hardened through formal verification.
Verus (SMT/Z3) + Rocq (theorem proving).
"""

module(
    name = "gale",
    version = "0.1.0",
    compatibility_level = 1,
)

# Verus verification rules
bazel_dep(name = "rules_verus", version = "0.1.0")
git_override(
    module_name = "rules_verus",
    remote = "https://github.com/pulseengine/rules_verus.git",
    commit = "e2c1600a8cca4c0deb78c5fcb4a33f1da2273d29",
)

# Rocq + coq-of-rust rules
bazel_dep(name = "rules_rocq_rust", version = "0.1.0")
git_override(
    module_name = "rules_rocq_rust",
    remote = "https://github.com/pulseengine/rules_rocq_rust.git",
    commit = "6a8da0bd30b5f80f811acefbf6ac5740a08d4a8c",
)

# rocq-of-rust toolchain — translates Rust to Rocq
rocq_of_rust = use_extension("@rules_rocq_rust//coq_of_rust:extensions.bzl", "rocq_of_rust")
rocq_of_rust.toolchain(
    use_real_library = True,
)
use_repo(rocq_of_rust, "rocq_of_rust_toolchains", "rocq_of_rust_source")
register_toolchains("@rocq_of_rust_toolchains//:toolchain")

# Nix integration for Rocq toolchain
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

# Configure nixpkgs
nix_repo = use_extension(
    "@rules_nixpkgs_core//extensions:repository.bzl",
    "nix_repo",
)
nix_repo.github(
    name = "nixpkgs",
    org = "NixOS",
    repo = "nixpkgs",
    commit = "88d3861acdd3d2f0e361767018218e51810df8a1",
    sha256 = "",
)
use_repo(nix_repo, "nixpkgs")
