[package]
name = "gale-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "C FFI bindings for Gale verified kernel primitives (semaphore, mutex)"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
gale = { path = ".." }

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
