[package]
name = "gale-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "C FFI bindings for Gale verified kernel primitives (sem, mutex, condvar, atomic, spinlock, ring_buf, ...)"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]

[features]
default = ["all"]
all = [
    "sem", "mutex", "condvar", "msgq", "pipe", "stack", "timer", "mem_slab",
    "event", "fifo", "lifo", "queue", "mbox", "timeout", "poll",
    "futex", "timeslice", "kheap", "thread_lifecycle", "work",
    "fatal", "mempool", "dynamic", "smp_state", "sched",
    "mem_domain", "userspace", "heap", "ring_buf", "bitarray", "rbtree",
    "spinlock_validate", "spinlock", "atomic", "ipi", "cpu_mask",
]
sem = []
mutex = []
condvar = []
msgq = []
pipe = []
stack = []
timer = []
mem_slab = []
event = []
fifo = []
lifo = []
queue = []
mbox = []
timeout = []
poll = []
futex = []
timeslice = []
kheap = []
thread_lifecycle = []
work = []
fatal = []
mempool = []
dynamic = []
smp_state = []
sched = []
mem_domain = []
userspace = []
heap = []
ring_buf = []
bitarray = []
rbtree = []
spinlock_validate = []
spinlock = []
atomic = []
ipi = []
cpu_mask = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
gale = { path = ".." }

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
opt-level = "z"  # optimize for size (embedded)
lto = true        # fat LTO — maximum interprocedural optimization
codegen-units = 1
panic = "abort"
overflow-checks = true

# Cross-language LTO profile: emit LLVM bitcode instead of machine code.
#
# When building with LLVM/clang + CONFIG_LTO=y, the Rust static library
# must contain LLVM bitcode so that lld can inline Rust functions into C
# call sites. Setting lto=false here prevents rustc from consuming the
# bitcode internally (fat LTO); instead, -Clinker-plugin-lto in RUSTFLAGS
# tells rustc to emit .o files containing LLVM IR, which lld merges with
# the C bitcode during the final link.
#
# codegen-units=1 ensures all Rust code lands in a single bitcode module,
# giving the linker maximum visibility for cross-language inlining.
[profile.release-lto]
inherits = "release"
lto = false       # do NOT do fat LTO — let the external linker (lld) handle it
