[package]
name = "gale-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.gale]
path = ".."

[[bin]]
name = "sem_fuzz"
path = "fuzz_targets/sem_fuzz.rs"
doc = false

[[bin]]
name = "sem_api_fuzz"
path = "fuzz_targets/sem_api_fuzz.rs"
doc = false

[[bin]]
name = "mutex_fuzz"
path = "fuzz_targets/mutex_fuzz.rs"
doc = false

[[bin]]
name = "mutex_api_fuzz"
path = "fuzz_targets/mutex_api_fuzz.rs"
doc = false

[[bin]]
name = "condvar_fuzz"
path = "fuzz_targets/condvar_fuzz.rs"
doc = false

[[bin]]
name = "msgq_fuzz"
path = "fuzz_targets/msgq_fuzz.rs"
doc = false

[[bin]]
name = "stack_fuzz"
path = "fuzz_targets/stack_fuzz.rs"
doc = false

[[bin]]
name = "pipe_fuzz"
path = "fuzz_targets/pipe_fuzz.rs"
doc = false

[[bin]]
name = "timer_fuzz"
path = "fuzz_targets/timer_fuzz.rs"
doc = false

[[bin]]
name = "event_fuzz"
path = "fuzz_targets/event_fuzz.rs"
doc = false

[[bin]]
name = "mem_slab_fuzz"
path = "fuzz_targets/mem_slab_fuzz.rs"
doc = false
