[package]
name = "gale-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.85"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.gale]
path = ".."

# Shared harness library for cross-primitive fuzz targets (e.g. the
# precondition-erasure runner). Per-primitive targets do not need it.
[lib]
path = "src/lib.rs"

[[bin]]
name = "precondition_erasure"
path = "fuzz_targets/precondition_erasure.rs"
doc = false
test = false

[[bin]]
name = "precondition_erasure_smoke"
path = "src/bin/precondition_erasure_smoke.rs"
doc = false
test = false

[[bin]]
name = "sem_fuzz"
path = "fuzz_targets/sem_fuzz.rs"
doc = false

[[bin]]
name = "sem_api_fuzz"
path = "fuzz_targets/sem_api_fuzz.rs"
doc = false

[[bin]]
name = "mutex_fuzz"
path = "fuzz_targets/mutex_fuzz.rs"
doc = false

[[bin]]
name = "mutex_api_fuzz"
path = "fuzz_targets/mutex_api_fuzz.rs"
doc = false

[[bin]]
name = "condvar_fuzz"
path = "fuzz_targets/condvar_fuzz.rs"
doc = false

[[bin]]
name = "msgq_fuzz"
path = "fuzz_targets/msgq_fuzz.rs"
doc = false

[[bin]]
name = "stack_fuzz"
path = "fuzz_targets/stack_fuzz.rs"
doc = false

[[bin]]
name = "pipe_fuzz"
path = "fuzz_targets/pipe_fuzz.rs"
doc = false

[[bin]]
name = "timer_fuzz"
path = "fuzz_targets/timer_fuzz.rs"
doc = false

[[bin]]
name = "event_fuzz"
path = "fuzz_targets/event_fuzz.rs"
doc = false

[[bin]]
name = "mem_slab_fuzz"
path = "fuzz_targets/mem_slab_fuzz.rs"
doc = false
