# Rocq-of-Rust translation and compilation (Track 2: Theorem Proving)
#
# Hand-written standalone .rs files (no crate:: imports) are translated
# to Rocq by coq_of_rust, then compiled for formal verification.
#
# The standalone files mirror the logic in src/*.rs but are self-contained
# so coq_of_rust can translate them without resolving cross-module deps.
# plain/src/*.rs is the verus-stripped crate version for cargo/clippy.

load("@rules_rocq_rust//coq_of_rust:defs.bzl", "coq_of_rust_library")
load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library")

package(default_visibility = ["//visibility:public"])

# Expose plain Rust crate sources to root package (cargo_test, clippy, etc.)
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
)

# RocqOfRust library alias
alias(
    name = "rocq_of_rust_lib",
    actual = "@rocq_of_rust_source//:rocq_of_rust_main",
)

# ── Modules: translate standalone .rs → .v → .vo ──────────────────────

[
    (
        coq_of_rust_library(
            name = mod + "_translated",
            rust_sources = [mod + ".rs"],
            edition = "2021",
        ),
        rocq_library(
            name = mod + "_compiled",
            srcs = [":" + mod + "_translated"],
            deps = [":rocq_of_rust_lib"],
            extra_flags = ["-impredicative-set"],
        ),
    )
    for mod in [
        "sem",
        "mutex",
        "condvar",
        "msgq",
        "stack",
        "pipe",
        "timer",
        "event",
        "mem_slab",
        "queue",
        "fifo",
    ]
]
