# Rocq-of-Rust translation and compilation (Track 2: Theorem Proving)
#
# Hand-written standalone .rs files (no crate:: imports) are translated
# to Rocq by coq_of_rust, then compiled for formal verification.
#
# The standalone files mirror the logic in src/*.rs but are self-contained
# so coq_of_rust can translate them without resolving cross-module deps.
# plain/src/*.rs is the verus-stripped crate version for cargo/clippy.

load("@rules_rocq_rust//coq_of_rust:defs.bzl", "coq_of_rust_library")
load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library")
load("//bzl:defs.bzl", "verus_strip_gate")

package(default_visibility = ["//visibility:public"])

# Expose plain Rust crate sources to root package (cargo_test, clippy, etc.)
filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
)

# RocqOfRust library alias
alias(
    name = "rocq_of_rust_lib",
    actual = "@rocq_of_rust_source//:rocq_of_rust_main",
)

# ── Gate: verify plain/src/*.rs matches verus-strip output of src/*.rs ──────
#
# Delegates to @rules_verus//verus:defs.bzl#verus_strip_test via the
# verus_strip_gate macro, which overrides _strip_tool to use
# //tools/verus-strip:verus-strip (gale's local tool with newer stripping
# logic: let ghost, inline proof{}, assume_specification support).
verus_strip_gate(
    name = "strip_gate",
    verus_srcs = [
        "//:src/error.rs",
        "//:src/priority.rs",
        "//:src/thread.rs",
        "//:src/wait_queue.rs",
        "//:src/sem.rs",
        "//:src/mutex.rs",
        "//:src/condvar.rs",
        "//:src/msgq.rs",
        "//:src/pipe.rs",
        "//:src/stack.rs",
        "//:src/fifo.rs",
        "//:src/lifo.rs",
        "//:src/timer.rs",
        "//:src/event.rs",
        "//:src/mem_slab.rs",
        "//:src/queue.rs",
        "//:src/futex.rs",
        "//:src/mbox.rs",
        "//:src/timeout.rs",
        "//:src/poll.rs",
        "//:src/sched.rs",
        "//:src/thread_lifecycle.rs",
        "//:src/timeslice.rs",
        "//:src/heap.rs",
        "//:src/kheap.rs",
        "//:src/work.rs",
        "//:src/fatal.rs",
        "//:src/fault_decode.rs",
        "//:src/mempool.rs",
        "//:src/dynamic.rs",
        "//:src/smp_state.rs",
        "//:src/stack_config.rs",
        "//:src/device_init.rs",
        "//:src/mem_domain.rs",
        "//:src/spinlock.rs",
        "//:src/atomic.rs",
        "//:src/userspace.rs",
        "//:src/ring_buf.rs",
        "//:src/lib.rs",
    ],
    plain_srcs = [
        "src/error.rs",
        "src/priority.rs",
        "src/thread.rs",
        "src/wait_queue.rs",
        "src/sem.rs",
        "src/mutex.rs",
        "src/condvar.rs",
        "src/msgq.rs",
        "src/pipe.rs",
        "src/stack.rs",
        "src/fifo.rs",
        "src/lifo.rs",
        "src/timer.rs",
        "src/event.rs",
        "src/mem_slab.rs",
        "src/queue.rs",
        "src/futex.rs",
        "src/mbox.rs",
        "src/timeout.rs",
        "src/poll.rs",
        "src/sched.rs",
        "src/thread_lifecycle.rs",
        "src/timeslice.rs",
        "src/heap.rs",
        "src/kheap.rs",
        "src/work.rs",
        "src/fatal.rs",
        "src/fault_decode.rs",
        "src/mempool.rs",
        "src/dynamic.rs",
        "src/smp_state.rs",
        "src/stack_config.rs",
        "src/device_init.rs",
        "src/mem_domain.rs",
        "src/spinlock.rs",
        "src/atomic.rs",
        "src/userspace.rs",
        "src/ring_buf.rs",
        "src/lib.rs",
    ],
)

# ── Modules: translate standalone .rs → .v → .vo ──────────────────────

[
    (
        coq_of_rust_library(
            name = mod + "_translated",
            rust_sources = [mod + ".rs"],
            edition = "2021",
        ),
        rocq_library(
            name = mod + "_compiled",
            srcs = [":" + mod + "_translated"],
            deps = [":rocq_of_rust_lib"],
            extra_flags = ["-impredicative-set"],
        ),
    )
    for mod in [
        "sem",
        "mutex",
        "condvar",
        "msgq",
        "stack",
        "pipe",
        "timer",
        "event",
        "mem_slab",
        "queue",
        "fifo",
    ]
]
