# Hand-written Rocq proofs about the semaphore
#
# These proofs reason about the semaphore's abstract properties
# (invariant preservation, compositional correctness) using Rocq's
# tactic language. They complement the SMT-backed Verus proofs.

load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# Compile the semaphore proofs
rocq_library(
    name = "sem_proofs",
    srcs = ["sem_proofs.v"],
    deps = [
        "//plain:sem_compiled",
        "//plain:rocq_of_rust_lib",
    ],
    extra_flags = ["-impredicative-set"],
)

# Test: verify all proofs check
rocq_proof_test(
    name = "sem_proofs_test",
    srcs = ["sem_proofs.v"],
    deps = [":sem_proofs"],
)
